--- a/front-end/src/app/login/login.component.scss
+++ b/front-end/src/app/login/login.component.scss
@@ -2,9 +2,11 @@
 
 .login {    
     background-image: url("../../assets/img/fec-logo-5opac.png");
-    color: $black;
+    background-color: #cccccc;
     height: 100%;   
-    padding-top: 15px;    
+    padding-top: 15px;
+    //background-repeat: no-repeat;
+    //background-size: 100% 100%;
     header {
       .logo {
         margin-bottom: 10px;
@@ -13,37 +15,55 @@
     }
   .title-front {
     color:  #112E51;
-    font-family: Lato Black, Reg;
+    font-family: 'Lato-Black', sans-serif;
+    font-weight: 900;
     font-size: 100px;
-    font-kerning: -4.3pt;
+    letter-spacing:-7.8px;
   }
   .title-rear {
     color: #CA1A0F;
-    font-family: Lato Black, Reg;
+    font-family: 'Lato-Black', sans-serif;
+    font-weight: 900;
     font-size: 100px;
-    font-kerning: -4.3pt;
+    letter-spacing:-7.8px;
   } 
   .or-padding {
-    padding-left: 5px;
-    padding-right: 5px;
-    color: #631010;
+    //padding-left: 5px;
+    //padding-right: 5px;
+    color: #C80505;       
+  }
+  .padding-left {
+    margin-left: -40px;
   }
   .eye-logo {
     width: 30px;
     height: 30px;
     color: #112E51;
-    margin-top: 2px;
+    //margin-top: 2px;
+    margin-bottom: 30px;
     cursor: pointer;
+  }  
+  .fec-title {
+    height: 50%;
+    width: 50%;   
+  }
+  .link-text {
+    text-align: right;
+  }
+  .title-name {
+    margin-top: 10px;
   }
   .login-box {
-    //background-color: $alto;
-    min-height: 375px;
+    //background-color: $alto;    
+    //min-height: 375px;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 15px;
-    padding-top: 150px;
-    text-align: center;
-    width: 300px;
+    padding-top: 120px;
+    text-align: center;    
+    //width: 300px;
+    
+    //@include make-text-input(265px);
     @include media(tablet) {
       width: 500px;
     }
@@ -51,13 +71,17 @@
       width: 500px;
     }
     @include media(largeDesktop) {
-      width: 700px;
+      width: 800px;
     }
+  
     .grid-row {
       margin: 0;
       &.form-field__info {
+        height: 50px;
+        //width: 800px; //350px;
+        //font-size: 20px;
         margin-top: 30px;
-        margin-bottom: 10px;
+        margin-bottom: 25px; //10px;
       }
       &.form-field {
         margin-bottom: 25px;
@@ -65,14 +89,15 @@
       .grid-row__col {
         padding: 0;
         label {          
-          font-family: Lato Reg;
+          font-family: 'Lato-Reg', sans-serif;
           font-size: 20px;
-          color: #112E51;
+          color: #164F85;
         }
         .link {
-          font-family: $mainFontFamily;
-          color: #631010;
+          font-family: 'Lato-Reg', sans-serif;
+          color: #C80505;
           top: 150px;
+          text-align: right; 
         }
         .login-input {
           /*     
@@ -86,12 +111,29 @@
           @include media(largeDesktop) {
             @include make-text-input(650px, 1.5em, 1em, 1em);
           }
-          */          
-          width: 450px;
+          */   
+          @include make-text-input(230px);
+          @include media(tablet) {
+            width: 450px;
+          }
+          @include media(mediumDesktop) {
+            width: 450px;
+          }
+          @include media(largeDesktop) {
+            width: 450px;
+          }       
+          
+          font-family: 'Lato-Reg', sans-serif;  
+          font-size: 20px;      
+          //width: 450px;
+          height: 25px;
           margin-left: auto;
           margin-right: auto;
+          //margin-bottom: 25px;
           border: none;
-          border-bottom: 2px solid  $primaryBlue;         
+          border-radius: 0px;
+          border-bottom: 1px solid  #164F85;
+          background: transparent;
         }
         .left-text {
           padding-left: 15px;
@@ -101,19 +143,27 @@
         }
         .error__committee-id,
         .error__password-error {
-          @extend .text-error;
+          @extend .text-error;          
         }
         .login__btn {
-          @include button-variant($primaryBlue, $primaryBlue);
-          @include button-size($input-btn-padding-y, $input-btn-padding-x, 1.5em, $input-btn-line-height, $btn-border-radius);
+          //@include button-variant($primaryBlue, $primaryBlue);
+          //@include button-size($input-btn-padding-y, $input-btn-padding-x, 1.5em, $input-btn-line-height, $btn-border-radius);
           cursor: pointer;
-          font-family: $mainFontFamily;
+          //font-family: $mainFontFamily;
+          width: 140px;
+          height: 40px;
           margin-bottom: 15px;
           margin-top: 30px;          
           color: #ffffff;
           background-color: #164F85;
-          font-family: Lato Bold;
-          font-size: 20px;          
+          font-family: 'Lato-Bold', sans-serif;
+          font-size: 20px;
+          font-weight: 700;
+          border-radius: 5px;
+          border-style: solid;
+        }
+        .login__btn:hover {
+          background-color: #C80505;
         }
         .logged-out-msg {
           font-size: 1em;
