Fne 790 s print21 mahendra ver2 (#1097)
* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixes

--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -242,8 +242,8 @@
                         : ''
                     "
                   >
-                    <ng-option *ngFor="let item of officeSought" [ngValue]="item">
-                      {{ item.code }} - {{ item.name }}
+                    <ng-option *ngFor="let item1 of officeSought" [ngValue]="item1">
+                      {{ item1.code }} - {{ item1.name }}
                     </ng-option>
                   </ng-select>
                 </ng-container>
@@ -260,8 +260,8 @@
                         : ''
                     "
                   >
-                    <ng-option *ngFor="let item of states" [ngValue]="item">
-                      {{ item.code }} - {{ item.name }}
+                    <ng-option *ngFor="let item2 of states" [ngValue]="item2">
+                      {{ item2.code }} - {{ item2.name }}
                     </ng-option>
                   </ng-select>
                 </ng-container>
@@ -278,8 +278,8 @@
                         : ''
                     "
                   >
-                    <ng-option *ngFor="let item of entityTypes" [ngValue]="item">
-                      {{ item.code }} - {{ item.name }}
+                    <ng-option *ngFor="let item3 of entityTypes" [ngValue]="item3">
+                      {{ item3.code }} - {{ item3.name }}
                     </ng-option>
                   </ng-select>
                 </ng-container>                
