--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -371,7 +371,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </ng-container>
     </section>
     <footer>
       <footer>
