dummy change for what happened? 9/18 5:30

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -1,3 +1,4 @@
+<!-- dummy change for what happened? 9/18 5:30 -->
 <ng-template #rt let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadItem(r)" [term]="t"></ngb-highlight>
 </ng-template>
