--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -189,7 +189,7 @@
                 <button class="dropdown-item" (click)="editTransaction(trxChild)">
                   <i class="edit-icon"></i> Edit
                 </button>
-                <button class="dropdown-item" (click)="printAllSelected(trx.child)">
+                <button class="dropdown-item" (click)="printTransaction(trxChild)">
                   <i class="fas fa-print"></i> Print
               </button>  
                 <button class="dropdown-item" (click)="cloneTransaction(trxChild)">
