Fne all satheesh sprint21 1 (#1111)
* fix dynamic fields issue

* fixed beneficiary candidate lookup

* Beneficiary Candidate lookup changes

* Beneficiary candidate lookup format fixed

* fixed beneficiary Candidate auto lookup & setting beneficiary Candidate entity ID

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -195,7 +195,7 @@
                           [ngbTypeahead]="isFieldName(col?.name, 'beneficiary_cand_id') ? searchCandidateId : searchCommitteeId" 
                           [focusFirst]=false
                           [resultTemplate]="isFieldName(col?.name, 'beneficiary_cand_id') ? rtCandidateId : rtCommitteeId" 
-                          [inputFormatter]="formatterCommitteeId"
+                          [inputFormatter]="isFieldName(col?.name, 'beneficiary_cand_id') ? formatterCandidateId: formatterCommitteeId"
                           (selectItem)="handleSelectedOrg($event, col)" (keyup)="handleFormFieldKeyup($event, col)" />
                         <input *ngIf="isFieldName(col?.name, 'donor_cmte_name') ||
                                   isFieldName(col?.name, 'beneficiary_cmte_name')" class="form-control"
