Fne all satheesh sprint21 1 (#1115)
* fix dynamic fields issue

* fixed beneficiary candidate lookup

* Beneficiary Candidate lookup changes

* Beneficiary candidate lookup format fixed

* fixed beneficiary Candidate auto lookup & setting beneficiary Candidate entity ID

* fixed child transaction styles

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -154,7 +154,7 @@
           <td style="padding-left: 1.5rem;">
             <input [(ngModel)]="trxChild.selected" type="checkbox" (click)="checkForMultiChecked($event)">
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{trxChild.itemized ==='U' ? trxChild.type +' ('+ trxChild.itemized + ') ' : trxChild.type}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('type')" style="padding-left: 1.5rem;">{{trxChild.itemized ==='U' ? trxChild.type +' ('+ trxChild.itemized + ') ' : trxChild.type}}</td>
           <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trxChild.transactionId}}</td>
           <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{trxChild.name}}</td>
           <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trxChild.street}} {{trxChild.street2}}</td>
