--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
@@ -143,6 +143,7 @@
   .child-bg {
     padding-left: 3rem;
     background-color: #D9EDF6!important;
+    font-style: italic;
   }
 
   /* arrow common style */
