Sprint21 mahendra bug fixing for uat (#1116)
* sprint21 bug fixing

* sprint21 bug fixing

* sprint 21 bug fixing

* sprint 21 bug fixes

* sprint21 bug fixing

* sprint21 bug fixing

* Sprint 21 bug fixing

* sprint21 bug fixing

* sprint21 bug fixing

* Addnew bug fixing

* addnew contact bug fixing

* Addnew contact changes

--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -270,7 +270,9 @@
                   <ng-select #entityTypeSelect
                     [items]="entityTypes"
                     (change)="handleTypeChange($event, col)"
-                    class="state-select"
+                    
+                    [style.width]="col?.width"
+                    [style.height]="col?.height"
                     [formControlName]="col?.name"
                     bindValue="code"
                     bindLabel="name" 
