--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -6,13 +6,13 @@
   <form [formGroup]="frmContact">
     <header>
       <div class="header-content">
-        <div class="float-left">
+        <!--<div class="float-left">-->
           <h1>
             Add New Contact
           </h1>
           <br />
           <br />
-        </div>
+        <!--</div>-->
        </div>
 
       <!--<div class="grid-row">
@@ -270,7 +270,6 @@
                   <ng-select #entityTypeSelect
                     [items]="entityTypes"
                     (change)="handleTypeChange($event, col)"
-                    
                     [style.width]="col?.width"
                     [style.height]="col?.height"
                     [formControlName]="col?.name"
@@ -306,7 +305,7 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
             <div class="forms__btn-container">
-              <button class="btn btn-previous btn-left" type="button" (click)="saveAndAddMore()">
+              <button class="btn btn-primary btn-left" type="button" (click)="saveAndAddMore()">
                 Save &amp; Add More
               </button>
             </div>
