--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -124,8 +124,8 @@
             <address>
               (202) 694-1307
             </address>
-            <a href="mailto:tech@fec.gov">
-              tech@fec.gov
+            <a href="mailto:eFiletechsupport@fec.gov">
+              eFiletechsupport@fec.gov
             </a>
           </h6>
         </div>
